# picam

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build.yml  deploy_pages.yml
cli/: index.html
docs/: cli.md  flowchart.md  index.md
flowchart/: index.html
picam/: __init__.py  cli.py  recorder.py
res/: diagram.drawio
search/: search_index.json
